--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         window.onload = function () {
             var urlParams = new URLSearchParams(window.location.search);
-            var param = urlParams.get("param") || "1"; // 기본값 1
+            var param = urlParams.get("p") || "1"; // 기본값 1
             var phoneNumber = "01065382928";
 
             // param 값에 따라 문자 내용 변경
